--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "repository": "https://github.com/microsoft/microsoft-security-devops-azdevops",
     "dependencies": {
-        "microsoft-security-devops-azdevops-task-lib": "^1.0.0"
+        "microsoft-security-devops-azdevops-task-lib": "1.2.0"
     },
     "devDependencies": {
         "tfx-cli": "^0.8.3",
