--- a/src/extension-manifest-debug.json
+++ b/src/extension-manifest-debug.json
@@ -2,11 +2,13 @@
   "manifestVersion": 1,
   "id": "microsoft-security-devops-azdevops-debug",
   "name": "Microsoft Security DevOps (Debug)",
-  "version": "1.0.4.0",
+  "version": "1.0.5.0",
   "publisher": "ms-security-devops",
   "description": "Build tasks for performing security analysis.",
   "public": false,
-  "galleryFlags": [],
+  "galleryFlags": [
+    "Preview"
+  ],
   "targets": [
     {
       "id": "Microsoft.VisualStudio.Services.Cloud"
