--- a/src/extension-manifest-debug.json
+++ b/src/extension-manifest-debug.json
@@ -2,8 +2,8 @@
   "manifestVersion": 1,
   "id": "microsoft-security-devops-azdevops-debug",
   "name": "Microsoft Security DevOps (Debug)",
-  "version": "1.3.0.0",
-  "publisher": "ms-security-devops",
+  "version": "1.3.1.0",
+  "publisher": "ms-securitydevops",
   "description": "Build tasks for performing security analysis.",
   "public": false,
   "galleryFlags": [
