--- a/src/extension-manifest.json
+++ b/src/extension-manifest.json
@@ -2,7 +2,7 @@
   "manifestVersion": 1,
   "id": "microsoft-security-devops-azdevops",
   "name": "Microsoft Security DevOps",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "publisher": "ms-securitydevops",
   "description": "Build tasks for performing security analysis.",
   "public": false,
@@ -55,7 +55,7 @@
       "uri": "mailto:mscahelp@microsoft.com"
     },
     "license": {
-      "uri": "https://aka.ms/msdo-eula"
+      "uri": "https://github.com/microsoft/security-devops-azdevops/blob/main/LICENSE"
     }
   },
   "branding": {
