--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
     "name": "microsoft-security-devops-azdevops",
-    "version": "1.4.0",
+    "version": "1.5.0",
     "description": "Microsoft Security DevOps for Azure DevOps.",
     "author": "Microsoft Corporation",
     "license": "MIT",
@@ -9,7 +9,7 @@
         "microsoft-security-devops-azdevops-task-lib": "1.4.0"
     },
     "devDependencies": {
-        "tfx-cli": "^0.8.3",
+        "tfx-cli": "0.8.3",
         "typescript": "^4.1.5"
     }
 }
