--- a/src/package.json
+++ b/src/package.json
@@ -1,15 +1,15 @@
 {
     "name": "microsoft-security-devops-azdevops",
-    "version": "1.5.0",
+    "version": "1.7.0",
     "description": "Microsoft Security DevOps for Azure DevOps.",
     "author": "Microsoft Corporation",
     "license": "MIT",
     "repository": "https://github.com/microsoft/microsoft-security-devops-azdevops",
     "dependencies": {
-        "microsoft-security-devops-azdevops-task-lib": "1.4.0"
+        "@microsoft/security-devops-azdevops-task-lib": "1.7.0-beta3"
     },
     "devDependencies": {
-        "tfx-cli": "0.12.0",
-        "typescript": "^4.1.5"
+        "tfx-cli": "^0.15.0",
+        "typescript": "^5.1.3"
     }
 }
