--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "repository": "https://github.com/microsoft/microsoft-security-devops-azdevops",
     "dependencies": {
-        "@microsoft/security-devops-azdevops-task-lib": "1.7.0-beta3"
+        "@microsoft/security-devops-azdevops-task-lib": "1.7.0-beta.6",
+        "azure-pipelines-task-lib": "4.3.1",
+        "azure-pipelines-tool-lib": "2.0.4"
     },
     "devDependencies": {
         "tfx-cli": "^0.15.0",
