Add pre and post job work

--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
         "azure-pipelines-tool-lib": "2.0.4"
     },
     "devDependencies": {
+        "@types/mocha": "^10.0.1",
         "tfx-cli": "^0.15.0",
         "typescript": "^5.1.3"
     }
