--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
         "@types/mockery": "^1.4.30",
         "@types/node": "^20.3.1",
         "@types/q": "^1.5.5",
+        "mocha": "^10.2.0",
         "tfx-cli": "^0.15.0",
         "typescript": "^5.1.3"
     }
