--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "author": "Microsoft Corporation",
     "license": "MIT",
     "repository": "https://github.com/microsoft/microsoft-security-devops-azdevops",
+    "scripts": {
+        "build": "dotnet build ./build.proj",
+        "test": "npx mocha test/**/*.js"
+    },
     "dependencies": {
         "@microsoft/security-devops-azdevops-task-lib": "1.7.2",
         "azure-pipelines-task-lib": "4.3.1",
