--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -10,8 +10,7 @@
     "strict": false,
     "esModuleInterop": true,
     "noImplicitAny": false,
-    "removeComments": true,
-    "sourceMap": true
+    "removeComments": true
   },
   "include": [
     "**/*"
