--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,19 +5,17 @@
     "lib": [
       "es6"
     ],
-    "outDir": "./lib",
-    "rootDir": "./src",
+    "outDir": "../lib",
+    "rootDir": "./",
     "strict": false,
     "esModuleInterop": true,
     "noImplicitAny": false,
-    "removeComments": true,
-    "sourceMap": true
+    "removeComments": true
   },
   "include": [
-    "src/**/*"
+    "**/*"
   ],
   "exclude": [
-    "node_modules",
-    "**/*.test.ts"
+    "node_modules"
   ]
 }
