--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "@types/mockery": "^1.4.30",
         "@types/node": "^20.3.1",
         "@types/q": "^1.5.5",
+        "@types/sinon": "^10.0.15",
         "mocha": "^10.2.0",
+        "sinon": "^15.2.0",
         "tfx-cli": "^0.15.0",
         "typescript": "^5.1.3"
     }
