Removing lib update for bug fix PR

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "test": "npx mocha **/*.tests.js"
     },
     "dependencies": {
-        "@microsoft/security-devops-azdevops-task-lib": "1.8.1-beta.2",
+        "@microsoft/security-devops-azdevops-task-lib": "1.7.2",
         "azure-pipelines-task-lib": "4.3.1",
         "azure-pipelines-tool-lib": "2.0.4"
     },
