--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "test": "npx mocha **/*.tests.js"
     },
     "dependencies": {
-        "@microsoft/security-devops-azdevops-task-lib": "1.7.2",
+        "@microsoft/security-devops-azdevops-task-lib": "1.8.1",
         "azure-pipelines-task-lib": "4.3.1",
         "azure-pipelines-tool-lib": "2.0.4"
     },
@@ -26,6 +26,6 @@
         "mocha": "^10.2.0",
         "sinon": "^15.2.0",
         "tfx-cli": "^0.15.0",
-        "typescript": "^5.1.3"
+        "typescript": "5.1.3"
     }
 }
