--- a/src/microsoft-security-devops-azdevops-decorator/package.json
+++ b/src/microsoft-security-devops-azdevops-decorator/package.json
@@ -9,18 +9,8 @@
         "build": "dotnet build ./../../build.proj /p:ExtensionId=microsoft-security-devops-azdevops-decorator",
         "compile": "dotnet build ./../../build.proj /t:Compile /p:ExtensionId=microsoft-security-devops-azdevops-decorator"
     },
-    "dependencies": {
-        "azure-pipelines-task-lib": "4.3.1",
-        "azure-pipelines-tool-lib": "2.0.4"
-    },
+    "dependencies": { },
     "devDependencies": {
-        "@types/mocha": "^10.0.1",
-        "@types/mockery": "^1.4.30",
-        "@types/node": "^20.3.1",
-        "@types/q": "^1.5.5",
-        "@types/sinon": "^10.0.15",
-        "mocha": "^10.2.0",
-        "sinon": "^15.2.0",
         "tfx-cli": "^0.15.0",
         "typescript": "^5.1.3"
     }
